--- a/Ejercicio_1/lesson.yaml
+++ b/Ejercicio_1/lesson.yaml
@@ -1,6 +1,6 @@
 - Class: meta
-  Course: Sem-HCACSo
-  Lesson: Ejercicio 1
+  Course: abs_R
+  Lesson: Ejercicio_1
   Author: Agustín Nieto
   Type: Standard
   Organization: INHUS-CONICET/UNMdP
