--- a/Ejercicio_2/lesson.yaml
+++ b/Ejercicio_2/lesson.yaml
@@ -7,8 +7,8 @@
   Version: 2.4.5
 
 - Class: cmd_question
-  Output: Pasemos ahora a los histogramas. Estos muestran los recuentos de frecuencia para una sola variable. Empecemos con uno fácil. Llama a qplot con 3 argumentos. Primero especifica la variable para la que quieres el recuento de frecuencias, en este caso hwy, luego especifica los datos (establecidos como mpg), y finalmente, la estética, fill, establecida como drv. En lugar de un simple histograma, este usará de nuevo colores para distinguir los 3 diferentes factores de conducción.
+  Output: Pasemos ahora a los gráficos de barras.
   CorrectAnswer: barplot(c(1,2,3,4,5))
   AnswerTests: omnitest(correctExpr='barplot(c(1,2,3,4,5))')
-  Hint: Escribe barplot(c(1,2,3,4,5)) en la línea de comando.
+  Hint: Escribe barplot(c(1,2,3,4,5))
   
